--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "expo-location": "^18.1.6",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.6",
+    "react-native": "0.79.5",
     "react-native-maps": "1.20.1",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.15.4"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
